--- a/src/grpc-helloworld/.vscode/launch.json
+++ b/src/grpc-helloworld/.vscode/launch.json
@@ -10,6 +10,7 @@
             "request": "launch",
             "mode": "auto",
             "program": "server/main.go"
+            // "cwd": "${workspaceFolder}"
         },
         {
             "name": "Launch Client",
