--- a/src/grpc-helloworld/.vscode/launch.json
+++ b/src/grpc-helloworld/.vscode/launch.json
@@ -2,6 +2,7 @@
     // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    // note: entry Program should point to folder where the main resides. don't point to the go file itself or else debug.ReadBuildInfo will have no info regarding BuildInfo.Main
     "version": "0.2.0",
     "configurations": [
         {
@@ -9,14 +10,14 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "server/main.go"
+            "program": "./server"
         },
         {
             "name": "Launch Client",
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "client/main.go"
+            "program": "./client"
         }
     ]
 }
